--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ deadpool = { version = "0.5.2", default-features = false, features = ["managed"]
 async-trait = "0.1.17"
 futures = { version = "0.3.1", features = ["compat"] }
 log = "0.4"
-async-memcached = { git = "https://github.com/nuclearfurnace/async-memcached.git", default-features = false }
+async-memcached = { version = "0.1", default-features = false }
