relicense to MIT/Apache-2.0
Signed-off-by: Toby Lawrence <toby@nuclearfurnace.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
 description = "Dead simple async pool for memcached"
 keywords = ["async", "memcached", "pool"]
-license = "MIT"
+license = "MIT/Apache-2.0"
 repository = "https://github.com/nuclearfurnace/deadpool-memcached"
 readme = "README.md"
 edition = "2018"
